# DataAug-for-ER

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
data_aug_for_pm/: config.yml  run_all_experiments.py  run_experiment.py
data_aug_for_pm/augmenter/: mixda.py  offline_augmentation.py  operator_contextual_aug.py  operator_easy_data_augmentation.py  operator_invda.py  operator_mixup.py
data_aug_for_pm/dataloader/: magellan_bert_loader.py  magellan_non_bert_loader.py  mp_bert_loader.py  mp_non_bert_loader.py  wdc_bert_loader.py  wdc_non_bert_loader.py
data_aug_for_pm/experiments/: __init__.py  abt_buy_bert_change_numbers.yml  abt_buy_bert_contextual.yml  abt_buy_bert_delete_random.yml  abt_buy_bert_insert_random.yml  abt_buy_bert_invda.yml  abt_buy_bert_mixda.yml  abt_buy_bert_mixup.yml  abt_buy_bert_network.yml  abt_buy_bert_no_aug.yml  abt_buy_bert_noising_disjoint.yml  abt_buy_bert_swap_random.yml  abt_buy_bert_synonym.yml  abt_buy_ditto_change_numbers.yml  abt_buy_ditto_contextual.yml  abt_buy_ditto_delete_random.yml  abt_buy_ditto_insert_random.yml  abt_buy_ditto_invda.yml  abt_buy_ditto_mixda.yml  abt_buy_ditto_mixup.yml  abt_buy_ditto_network.yml  abt_buy_ditto_no_aug.yml  abt_buy_ditto_noising_disjoint.yml  abt_buy_ditto_swap_random.yml  abt_buy_ditto_synonym.yml  amazon_google_bert_change_numbers.yml  amazon_google_bert_contextual.yml  amazon_google_bert_delete_random.yml  amazon_google_bert_insert_random.yml  amazon_google_bert_invda.yml  amazon_google_bert_mixda.yml  amazon_google_bert_mixup.yml  amazon_google_bert_network.yml  (+232 more)
(+34 files in other folders)
