[metadata]
name = data_aug_for_pm
version = file: version.txt
author = T. Rettenmeier
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    luigi
    matplotlib
    pandas
    pyarrow
    joblib
    transformers
    nltk
    scikit-learn
    mlflow
    spacy
    tensorboardX
    vastai
    pytorch-lightning==0.7.6
    sentencepiece
    nlpaug
    networkx
include_package_data = True
